--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,7 @@
   <version>1.0.0-SNAPSHOT</version>
   <packaging>war</packaging>
   <name>parkingarea</name>
+  <description>停车场管理系统</description>
   
     <properties>
  		 <!-- 主要依赖库的版本定义 -->
@@ -60,6 +61,12 @@
 	<dependency>
 	  <groupId>jstl</groupId>
 	  <artifactId>jstl</artifactId>
+	  <version>1.1.2</version>
+	</dependency>
+
+	<dependency>
+	  <groupId>taglibs</groupId>
+	  <artifactId>standard</artifactId>
 	  <version>1.1.2</version>
 	</dependency>
 
