--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,6 +9,10 @@
 	<listener>
 	    <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
+	
+	<listener>
+		<listener-class>com.parkarea.common.util.TimerTaskListener</listener-class>
+	</listener>
 	 
 	<!-- 设置Spring容器加载配置文件路径 -->
 	<context-param>
