--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,30 @@
     </dependency>
 
 	<dependency>
+		<groupId>org.codehaus.jackson</groupId>
+		<artifactId>jackson-core-lgpl</artifactId>
+		<version>1.9.6</version>
+	</dependency>
+	
+	<dependency>
+		<groupId>org.codehaus.jackson</groupId>
+		<artifactId>jackson-core-asl</artifactId>
+		<version>1.9.4</version>
+	</dependency>
+	
+	<dependency>
+		<groupId>org.codehaus.jackson</groupId>
+		<artifactId>jackson-mapper-asl</artifactId>
+		<version>1.9.5</version>
+	</dependency>
+	
+	<dependency>
+		<groupId>org.codehaus.jackson</groupId>
+		<artifactId>jackson-mapper-lgpl</artifactId>
+		<version>1.9.6</version>
+	</dependency>
+
+	<dependency>
 	  <groupId>aopalliance</groupId>
 	  <artifactId>aopalliance</artifactId>
 	  <version>1.0</version>
